# full-stack-admin

./: .gitignore  README.md  pom.xml
asm/: pom.xml
asm/javaagent/src/main/java/: module-info.java
asm/javaagent/src/main/java/zlhywlf/javaagent/: Main.java
backend/asm/: pom.xml
backend/asm/classfile/: pom.xml
backend/asm/javaagent/: pom.xml
backend/asm/javaagent/src/main/resources/: certificate.py
backend/asm/jni/: pom.xml
backend/cjson/: CMakeLists.txt
backend/cjson/include/: cjson.h
backend/cjson/src/: cjson.c
backend/cjson/test/: CMakeLists.txt  cjsonTest.c
backend/cpp/: CMakeLists.txt
backend/cpp/common/file/: Util.H
backend/cpp/common/logger/: DefaultLoggerAdapter.H  JavaLoggerAdapter.H  Logger.H  LoggerFactory.H  LoggerServer.H
backend/cpp/common/singleton/: Singleton.H
backend/cpp/common/string/: Util.H
backend/cpp/jni/: CMakeLists.txt
backend/cpp/jni/src/jni/util/: Util.H
backend/cpp/jni/test/: CMakeLists.txt  config.h.in  config.json  jniTest.C  jniTest.cc  jniTest.cpp
backend/cpp/jni/test/jni-demo/: pom.xml
backend/cpp/jni/test/jni-demo/src/main/java/zlhywlf/jni/demo/: Main.java
backend/cpp/json/: CMakeLists.txt
backend/cpp/json/src/json/adapter/: Adapter.H  RapidjsonAdapter.H
backend/cpp/json/src/json/mapper/: IntMapper.H  Mapper.H  RapidjsonMapper.H  SFINAE.H
backend/cpp/json/src/json/model/: Model.H  RapidjsonModel.H
backend/cpp/json/src/json/util/: JsonUtil.H  Util.H
backend/cpp/json/src/mapper/: Mapper.H  RapidjsonAdapter.H
backend/cpp/json/test/: CMakeLists.txt  jsonTest.cc
backend/cpp/json/test/model/: Data.H
backend/cpp/src/logger/: DefaultLoggerFactory.H  LoggerFactory.H
backend/cpp/test/: CMakeLists.txt  rootTest.cc  singletonTest.cc
backend/hadoop/: pom.xml
backend/office/: pom.xml
backend/py/: linear.ipynb  main.ipynb  main.py  math.ipynb  numpy.ipynb  office.ipynb  robot.py
backend/py/auto-report/: demo_report.py  demo_report_data.py  office.ipynb
backend/py/auto-report/data/: create.sql
backend/py/company/: etl.py
backend/py/company/data/: create.sql  产量.sql  燃料.sql
backend/py/dashboard/: main.py  template.html
backend/spring/: pom.xml
backend/spring/cloud/: pom.xml
backend/spring/cloud/common/: pom.xml
backend/spring/cloud/gateway/: pom.xml
backend/spring/cloud/generator/: pom.xml
backend/spring/cloud/http/: member.http
backend/spring/cloud/member/: pom.xml
backend/spring/cloud/sql/: init.sql  member.sql
backend/spring/subscription/: pom.xml
backend/spring/subscription/src/main/resources/: Dockerfile  application.properties
classfile/: pom.xml
classfile/src/test/java/zlhywlf/javaasm/: JavaAsmTest.java
document/: ctex-fontset-zlhywlf.def  main.tex  zlhywlfbook.cls
document/config/: content.tex  cover.tex  font.tex  header.tex  option.tex  title.tex
document/part/: java.tex  latex.tex  title.tex  vue.tex
document/part/java/: chapter01.tex
document/part/latex/: chapter01.tex
document/part/vue/: chapter01.tex
frontend/: .eslintrc.yml  .prettierrc.yml  .stylelintrc.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
frontend/app/admin/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/app/admin/src/: App.vue
frontend/package/cli/: index.ts  package.json  tsconfig.json
frontend/package/cli/__tests__/: cli.test.js
frontend/package/cli/src/command/: BaseCommand.ts  InitCommand.ts
frontend/package/cli/src/util/: exception.ts  inquirer.ts  log.ts  util.ts
frontend/package/util/: index.ts  package.json  tsconfig.json
frontend/package/util/src/: is.ts
javaagent/: pom.xml
javaagent/src/main/java/zlhywlf/javaagent/: Main.java
javaagent/src/test/java/zlhywlf/javaagent/: JavaAgentTest.java
javaasm/: pom.xml
javaasm/src/main/java/zlhywlf/javaasm/: BytesReader.java  ClassFileBuilder.java
javaasm/src/test/java/zlhywlf/javaasm/: JavaAsmTest.java
spring/: pom.xml
spring/subscription/: pom.xml
spring/subscription/src/main/resources/: application.properties
src/main/java/zlhywlf/javaagent/: Main.java
src/test/java/zlhywlf/javaagent/: AppTest.java
(+245 files in other folders)
