cmake_minimum_required(VERSION 3.20)

list(APPEND OPTION "-m64")
list(APPEND OPTION "-Wall")
list(APPEND OPTION "-Wextra")
list(APPEND OPTION "-Wold-style-cast")
list(APPEND OPTION "-Wnon-virtual-dtor")
list(APPEND OPTION "-Wno-unused-parameter")
list(APPEND OPTION "-Wno-invalid-offsetof")
list(APPEND OPTION "-Wno-attributes")
list(APPEND OPTION "-fPIC")
list(APPEND OPTION "-ftemplate-depth-100")

project(root)
add_library(${PROJECT_NAME} INTERFACE)
add_library(zlhywlf::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
target_compile_features(${PROJECT_NAME} INTERFACE cxx_std_17)
target_compile_options(${PROJECT_NAME} INTERFACE "$<$<COMPILE_LANG_AND_ID:CXX,ARMClang,AppleClang,Clang,GNU,LCC>:$<BUILD_INTERFACE:${OPTION}>>")
target_include_directories(${PROJECT_NAME} INTERFACE common $ENV{JAVA_HOME}/include $ENV{JAVA_HOME}/include/linux $ENV{JAVA_HOME}/include/darwin)

if (CMAKE_BUILD_TYPE STREQUAL Debug)
    include(CTest)
    enable_testing()
    add_subdirectory(test)
endif()

add_subdirectory(json)
add_subdirectory(jni)